@@ -1019,49 +1019,16 @@ void PinInput::FireKeyEvent(const int dispid, int keycode)
       }
       else if (keycode == g_pplayer->m_rgKeys[eStartGameKey] && dispid == DISPID_GameEvents_KeyDown)
       {
-         ViewSetupID view_setup = g_pplayer->m_ptable->m_BG_current_set;
-         PinTable *src, *dst;
-         if (!g_pvp->m_povEdit)
-         {
-            // Reset POV: copy from startup table to the live one
-            src = g_pplayer->m_pEditorTable;
-            dst = g_pplayer->m_ptable;
-         }
-         else
-         {
-            // Validate POV: copy from live table to the startup one
-            src = g_pplayer->m_ptable;
-            dst = g_pplayer->m_pEditorTable;
-         }
-         dst->m_cameraLayoutMode = src->m_cameraLayoutMode;
-         dst->m_BG_layback[view_setup] = src->m_BG_layback[view_setup];
-         dst->m_BG_rotation[view_setup] = src->m_BG_rotation[view_setup];
-         dst->m_BG_inclination[view_setup] = src->m_BG_inclination[view_setup];
-         dst->m_BG_xlatex[view_setup] = src->m_BG_xlatex[view_setup];
-         dst->m_BG_xlatey[view_setup] = src->m_BG_xlatey[view_setup];
-         dst->m_BG_xlatez[view_setup] = src->m_BG_xlatez[view_setup];
-         dst->m_BG_scalex[view_setup] = src->m_BG_scalex[view_setup];
-         dst->m_BG_scaley[view_setup] = src->m_BG_scaley[view_setup];
-         dst->m_BG_scalez[view_setup] = src->m_BG_scalez[view_setup];
-         dst->m_BG_FOV[view_setup] = src->m_BG_FOV[view_setup];
-         dst->m_lightHeight = src->m_lightHeight;
-         dst->m_lightRange = src->m_lightRange;
-         dst->m_lightEmissionScale = src->m_lightEmissionScale;
-         dst->m_envEmissionScale = src->m_envEmissionScale;
-         g_pplayer->m_pin3d.m_cam.x = 0;
-         g_pplayer->m_pin3d.m_cam.y = 0;
-         g_pplayer->m_pin3d.m_cam.z = 0;
+         // Export POV file
+         string szPOVFilename = g_pplayer->m_ptable->m_szFileName;
+         if (ReplaceExtensionFromFilename(szPOVFilename, "pov"s))
+            g_pplayer->m_ptable->ExportBackdropPOV(szPOVFilename);
          if (g_pvp->m_povEdit)
-         {
-            // Export POV file then quit player
-            string szPOVFilename = g_pplayer->m_ptable->m_szFileName;
-            if (ReplaceExtensionFromFilename(szPOVFilename, "pov"s))
-               g_pplayer->m_ptable->ExportBackdropPOV(szPOVFilename);
             g_pvp->QuitPlayer(Player::CloseState::CS_CLOSE_APP);
-         }
       }
       else if (keycode == g_pplayer->m_rgKeys[ePlungerKey])
       {
+         // Reset to default values
          PinTable* table = g_pplayer->m_ptable;
          ViewSetupID view_setup = table->m_BG_current_set;
          table->m_cameraLayoutMode = CLM_ABSOLUTE;
@@ -1098,9 +1065,37 @@ void PinInput::FireKeyEvent(const int dispid, int keycode)
          g_pplayer->m_pin3d.m_cam.y = 0;
          g_pplayer->m_pin3d.m_cam.z = 0;
       }
-      else if (keycode == g_pplayer->m_rgKeys[eAddCreditKey] && dispid == DISPID_GameEvents_KeyDown && g_pvp->m_povEdit)
+      else if (keycode == g_pplayer->m_rgKeys[eAddCreditKey])
       {
-         g_pvp->QuitPlayer(Player::CloseState::CS_CLOSE_APP);
+         if (dispid == DISPID_GameEvents_KeyDown && g_pvp->m_povEdit)
+            // POV Edit mode => quit
+            g_pvp->QuitPlayer(Player::CloseState::CS_CLOSE_APP);
+         else
+         {
+            // Reset POV: copy from startup table to the live one
+            ViewSetupID view_setup = g_pplayer->m_ptable->m_BG_current_set;
+            PinTable *src, *dst;
+            src = g_pplayer->m_pEditorTable;
+            dst = g_pplayer->m_ptable;
+            dst->m_cameraLayoutMode = src->m_cameraLayoutMode;
+            dst->m_BG_layback[view_setup] = src->m_BG_layback[view_setup];
+            dst->m_BG_rotation[view_setup] = src->m_BG_rotation[view_setup];
+            dst->m_BG_inclination[view_setup] = src->m_BG_inclination[view_setup];
+            dst->m_BG_xlatex[view_setup] = src->m_BG_xlatex[view_setup];
+            dst->m_BG_xlatey[view_setup] = src->m_BG_xlatey[view_setup];
+            dst->m_BG_xlatez[view_setup] = src->m_BG_xlatez[view_setup];
+            dst->m_BG_scalex[view_setup] = src->m_BG_scalex[view_setup];
+            dst->m_BG_scaley[view_setup] = src->m_BG_scaley[view_setup];
+            dst->m_BG_scalez[view_setup] = src->m_BG_scalez[view_setup];
+            dst->m_BG_FOV[view_setup] = src->m_BG_FOV[view_setup];
+            dst->m_lightHeight = src->m_lightHeight;
+            dst->m_lightRange = src->m_lightRange;
+            dst->m_lightEmissionScale = src->m_lightEmissionScale;
+            dst->m_envEmissionScale = src->m_envEmissionScale;
+            g_pplayer->m_pin3d.m_cam.x = 0;
+            g_pplayer->m_pin3d.m_cam.y = 0;
+            g_pplayer->m_pin3d.m_cam.z = 0;
+         }
       }
       else if (keycode == g_pplayer->m_rgKeys[eRightMagnaSave] && dispid == DISPID_GameEvents_KeyDown)
       {
